--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
+<html lang="az" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
 <head>
@@ -8,46 +8,53 @@
 <body>
 <div layout:fragment="content">
 
-
     <!-- Hero Start -->
     <div class="container-fluid bg-light page-header py-5">
         <div class="container text-center py-5">
             <h1 class="display-1 animated slideInLeft">Blog</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb justify-content-center animated slideInLeft mb-0">
-                    <li class="breadcrumb-item"><a class="text-primary" href="#">Ana Səhifə</a></li>
-                    <li class="breadcrumb-item"><a class="text-primary" href="#">Səhifələr</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Qalereya</li>
+                    <li class="breadcrumb-item"><a class="text-primary" th:href="@{/}">Ana Səhifə</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Blog</li>
                 </ol>
             </nav>
         </div>
     </div>
     <!-- Hero End -->
 
-
-    <!-- Blog Start -->
+    <!-- Blog List -->
     <div class="container-fluid blog p-0">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
-            <!-- hər blog ucun col -->
-            <div class="col wow fadeIn" data-wow-delay="0.1s" th:each="blog : ${blogs}">
+            <div class="col" th:each="blog : ${blogs}">
                 <div class="blog-item h-100 d-flex flex-column">
 
-                    <!-- sekil yuxarıda -->
-                    <img class="img-fluid w-100"
-                         th:attr="src=${blog.imagePath}"
-                         alt="Blog Image"
-                         style="object-fit: cover; min-height: 250px; max-height: 250px;">
+                    <a th:href="@{/blog/{id}(id=${blog.id})}">
+                        <img class="img-fluid w-100"
+                             th:src="${blog.imagePath}"
+                             style="object-fit: cover; min-height: 250px; max-height: 250px;">
+                    </a>
 
-
-                    <!-- metn aşagıda -->
                     <div class="bg-primary py-5 px-4 flex-grow-1 d-flex flex-column justify-content-between">
                         <div>
                             <p class="mb-2">
                                 <i class="fa fa-calendar-alt text-dark me-1"></i>
                                 <span th:text="${#temporals.format(blog.createdAt, 'dd MMM yyyy')}"></span>
                             </p>
-                            <h3 class="mb-3" th:text="${blog.title}">Blog Title</h3>
-                            <p th:utext="${blog.content}">Blog full text...</p>
+
+                            <h3 class="mb-3">
+                                <a class="text-dark" style="text-decoration:none"
+                                   th:href="@{/blog/{id}(id=${blog.id})}"
+                                   th:text="${blog.title}"></a>
+                            </h3>
+
+                            <p th:text="${blog.content != null && blog.content.length() > 150
+                                ? blog.content.substring(0,150) + '...'
+                                : blog.content}"></p>
+                        </div>
+
+                        <div class="mt-3">
+                            <a class="btn btn-dark rounded-pill"
+                               th:href="@{/blog/{id}(id=${blog.id})}">Daha çox oxu →</a>
                         </div>
                     </div>
 
@@ -57,8 +64,6 @@
     </div>
     <!-- Blog End -->
 
-
 </div>
 </body>
-
 </html>
