cashback is done

--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -52,13 +52,6 @@
           </li>
 
           <li class="sidebar-item">
-            <a th:href="@{/admin/prices}" class="sidebar-link">
-              <i class="bi bi-currency-dollar"></i>
-              <span>Qiymətlər</span>
-            </a>
-          </li>
-
-          <li class="sidebar-item">
             <a th:href="@{/admin/reservations}" class="sidebar-link">
               <i class="bi bi-calendar-check fs-5 me-2"></i>
               <span>Rezervasiyalar</span>
@@ -143,6 +136,9 @@
       <button class="sidebar-toggler btn x"><i data-feather="x"></i></button>
     </div>
   </div>
+
+  <div class="sidebar-overlay"></div>
+
 
   <!-- Main content -->
   <div id="main">
