--- a/src/main/resources/templates/user/layout.html
+++ b/src/main/resources/templates/user/layout.html
@@ -68,6 +68,13 @@
           </li>
 
           <li class="sidebar-item">
+            <a href="/" class="sidebar-link text-primary">
+              <i class="bi bi-arrow-left-circle"></i>
+              <span>Sayta qayıt</span>
+            </a>
+          </li>
+
+          <li class="sidebar-item">
             <a th:href="@{/logout}" class="sidebar-link text-danger">
               <i class="bi bi-box-arrow-right"></i>
               <span>Çıxış</span>
