index last change

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,30 +31,28 @@
 
                         <div class="row g-4 animated slideInLeft">
                             <div class="col-md-6">
-                                <div class="d-flex align-items-center">
+                                <a th:href="'tel:' + ${hero.callNumber}" class="d-flex align-items-center text-decoration-none">
                                     <div class="btn-square btn btn-primary flex-shrink-0">
                                         <i class="fa fa-phone text-dark"></i>
                                     </div>
                                     <div class="px-3">
                                         <h5 class="text-primary mb-0" th:text="${hero.callLabel}">Zəng et</h5>
-                                        <p class="fs-5 text-dark mb-0" th:text="${hero.callNumber}">
-                                            +994 50 512 50 66
-                                        </p>
+                                        <p class="fs-5 text-dark mb-0" th:text="${hero.callNumber}">+994 50 512 50 66</p>
                                     </div>
-                                </div>
+                                </a>
+
                             </div>
                             <div class="col-md-6">
-                                <div class="d-flex align-items-center">
+                                <a th:href="'mailto:' + ${hero.mailAddress}" class="d-flex align-items-center text-decoration-none">
                                     <div class="btn-square btn btn-primary flex-shrink-0">
                                         <i class="fa fa-envelope text-dark"></i>
                                     </div>
                                     <div class="px-3">
                                         <h5 class="text-primary mb-0" th:text="${hero.mailLabel}">Bizə yazın</h5>
-                                        <p class="fs-5 text-dark mb-0" th:text="${hero.mailAddress}">
-                                            info@domain.com
-                                        </p>
+                                        <p class="fs-5 text-dark mb-0" th:text="${hero.mailAddress}">info@domain.com</p>
                                     </div>
-                                </div>
+                                </a>
+
                             </div>
                         </div>
                     </div>
